<resources>
    <string name="app_name">API Demos</string>
    <string name="sign_up_already_login">You are currently logged in, register will cause login as another user.</string>
    <string name="sign_up_desc">Kii Cloud allows users to register with username, email and phone number. You need to fill in at least one of them.</string>
    <string name="sign_up_howto_enable_verification">Read below link to enable email or phone verification.\r\nhttp://documentation.kii.com/en/guides/android/managing-users/sign-up/</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="optional">Optional</string>
    <string name="phone_hint">Optional, without country code</string>
    <string name="password">Password</string>
    <string name="password_hint">At least 6 letters</string>
    <string name="register">Register</string>
    <string name="username_invalid">Username is not valid</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="phone_invalid">Phone is not valid</string>
    <string name="password_invalid">Password is not valid</string>
    <string name="reg_at_least_one">You need to fill in at least one of username, email or phone to create an account.</string>
    <string name="registering">Registering</string>
    <string name="in_progressing">In progressing…</string>
    <string name="verifying_code">Verifying code…</string>
    <string name="refreshing_status">Refreshing status…</string>
    <string name="refresh_status">Refresh status</string>
    <string name="verify_phone">Verify phone when you got sms</string>
    <string name="email_verified">Email is verified</string>
    <string name="phone_verified">Phone is verified</string>
    <string name="email_not_verified">Email is not verified</string>
    <string name="phone_not_verified">Phone is not verified</string>
    <string name="score">Score</string>
    <string name="app_version">AppVersion</string>
    <string name="level">Level</string>
    <string name="save">Save</string>
    <string name="need_to_login_first">You need to sign in or sign up first to try this</string>
    <string name="logout">Logout</string>
    <string name="delete">Delete</string>
    <string name="flex_analytics_des">This is utility for fill-in data for testing. Please refer to http://documentation.kii.com/en/guides/android/managing-analytics/flex-analytics/analyze-application-data/ for how to use flex analytics.</string>
    <string name="current_user">Current user: %s</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="login_with_token">Login with token</string>
    <string name="login_with_username">Login with username or email</string>
    <string name="login_with_phone">Login with phone</string>
    <string name="ua_email_phone">Username or email or phone</string>
    <string name="login">Login</string>
    <string name="reset_password">reset password</string>
    <string name="upload_email">upload email</string>
    <string name="no_token">There is no token saved</string>
    <string name="token_label">Token: %s</string>
    <string name="sign_in_already_login">You are currently logged in, sign in again will cause login as another user.</string>
    <string name="login_succ">Login successfully</string>
    <string name="login_failed">Login failed</string>
    <string name="not_login">Not login yet</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="current_password">Enter current password</string>
    <string name="change_password">Change password</string>
    <string name="change_pwd_succ">Change password successfully</string>
    <string name="change_pwd_failed">Change password failed</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_file_storage">File Storage</string>
    <string name="title_activity_downloading_files">Download Files</string>
    <string name="title_activity_file_browser">File Browser</string>
    <string name="title_activity_publishing_files">Publish Files</string>
    <string name="title_activity_uploading_files">Upload Files</string>
    <string name="title_activity_syncing_folder">Sync Folder</string>
    <string name="start_syncing">Start syncing</string>
    <string name="changing_sync_folder">Changing sync folder</string>
    <string name="uploading_a_file_with_resumable_transfer">Uploading a file with resumable transfer</string>
    <string name="resuming_a_suspended_upload">Resuming a suspended upload</string>
    <string name="manually_suspending_a_file_upload">Manually suspending a file upload</string>
    <string name="manually_terminating_a_file_upload">Manually terminating a file upload</string>
    <string name="publishing_files">Publishing files</string>
    <string name="downloading_a_file_with_resumable_transfer">Downloading a file with resumable transfer</string>
    <string name="resuming_a_suspended_download">Resuming a suspended download</string>
    <string name="manually_suspending_a_file_download">Manually suspending a file download</string>
    <string name="manually_terminating_a_file_download">Manually terminating a file download</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="file_browser">File broswer</string>
    <string name="go">Go</string>
    <string name="url">URL</string>
    <string name="expiration_time">Expiration time(Minutes):</string>
    <string name="default_expiration_time">10</string>
    <string name="current_path">Current path:</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="select_folder">Select folder</string>
    <string name="sync_folder">Sync folder:</string>
    <string name="current_folder">Current folder</string>
    <string name="sync">Sync</string>
    <string name="reset">Reset</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="invalid_folder">Invalid folder!</string>
    <string name="files_in_cloud">Files in cloud:</string>
    <string name="size">Size</string>
    <string name="downloading_files">Downloading files:</string>
    <string name="status">Status:</string>
    <string name="suspended">Suspended</string>
    <string name="error">Error</string>
    <string name="downloading">Downloading</string>
    <string name="finished">Finished</string>
    <string name="delete_failed">Delete failed</string>
    <string name="suspend_failed">Suspend failed</string>
    <string name="default_title">default</string>
    <string name="add_downloader_failed">Add downloader failed</string>
    <string name="common_yes">Yes</string>
    <string name="common_no">No</string>
    <string name="ask_resume">Would you like to resume it?</string>
    <string name="ask_suspend">Would you like to suspend it?</string>
    <string name="ask_download">Would you like to download it?</string>
    <string name="ask_delete">Would you like to delete it?</string>
    <string name="load_downloader_failed">Load downloader failed</string>
    <string name="load_kiifile_failed">Load KiiFile failed</string>
    <string name="download_failed">Download failed</string>
    <string name="ask_publish_file">Would you like to publish this file?</string>
    <string name="publish_failed">Publish failed</string>
    <string name="publish_succ">Publish successfully</string>
    <string name="open_url_failed">Open URL failed</string>
    <string name="create_uploader_failed">Create uploader failed</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="load_uploaders_failed">Load uploaders failed</string>
    <string name="delete_uploader_failed">Delete uploader failed</string>
    <string name="uploading">Uploading</string>
    <string name="Sync_folder_succ">Sync folder successfully</string>
    <string name="Sync_folder_failed">Sync folder failed</string>
    <string name="reset_succ">Reset successfully</string>
    <string name="reset_failed">Reset failed</string>
    <string name="save_folder">Save folder:</string>
    <string name="simple_sign_up_in_title">Simple sign up and sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="user_attributes">User attributes</string>
    <string name="retrie_other_user">Retrieving data from other users</string>
    <string name="logout_delete_title">Logout or delete user</string>
    <string name="add_geopoint">Add POI</string>
    <string name="query_pois_by_geodistance">Query POIs by GeoDistance</string>
    <string name="query_pois_by_geobox">Query POIs by Geobox</string>
    <string name="noteslist_title">Notes</string>
    <string name="new_note">New note</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="update_image">Update Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="download_image">Download Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="menu_showcode">Code</string>
	<string name="showcode_title">Code for %s</string>
	<string name="login_with_facebook_account">Login with Facebook Account</string>
	<string name="linking_a_kii_account_to_a_facebook_account">Linking a Kii Account to a Facebook Account</string>
	<string name="unlinking_a_kii_account_from_a_facebook_account">Unlinking a Kii Account from a Facebook Account</string>
	<string name="login_with_twitter_account">Login with Twitter Account</string>
	<string name="linking_a_kii_account_to_a_twitter_account">Linking a Kii Account to a Twitter Account</string>
	<string name="unlinking_a_kii_account_from_a_twitter_account">Unlinking a Kii Account from a Twitter Account</string>
    <string name="login_with_renren_account">login with renren account</string>
    <string name="login_with_weibo_account">login with weibo account</string>
    <string name="social_network_integration_title">Social network integration</string>
    <string name="link_succ">Link successfully</string>
    <string name="link_failed">Link failed</string>
    <string name="unlink_succ">Unlink successfully</string>
    <string name="unlink_failed">Unlink failed</string>
    <string name="abtests_title">A/B Testing</string>
    <string name="abtests_des">Please refer to http://documentation.kii.com/en/guides/ab-testing/ for how to use A/B Testing.</string>
	<string name="group_management">Group Management</string>
	<string name="create_group">Create a group</string>
	<string name="or">or</string>
	<string name="select_owned_group">Select an owned group</string>
	<string name="select_belonged_group">Select a group with me</string>
	<string name="add_to_group">Add to group</string>
	<string name="choose_group">Choose group</string>
	<string name="list_group_members">List group members</string>
	<string name="tip_get_group_first">Create or select a group first</string>
	<string name="tip_get_mem_group_first">Select a group with you first</string>
	<string name="set_group_content">Save note to group bucket</string>
	<string name="push_notifications">Push Notifications</string>
	<string name="show_results">Show results</string>
	<string name="flex_analytics">Flex Analytics</string>
	<string name="event_analytics">Event Analytics</string>
	<string name="event_analytics_desc">This code shows how to send event, and fetch recent week\'s data.</string>
	<string name="server_extension">Server Extension</string>
	<string name="push_desc">You can send test push notifications from developer portal.</string>
	<string name="push_create_topic">Create&amp;subscribe push topic</string>
	<string name="push_send">Send message to myself</string>
</resources>