<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/create_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_group" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or" />

        <Button
            android:id="@+id/select_owned_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_owned_group" />

        <TextView
            android:id="@+id/group_id_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <EditText
            android:id="@+id/username_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <Button
            android:id="@+id/add_to_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_to_group" />

        <Button
            android:id="@+id/list_group_members"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_group_members" />

        <Button
            android:id="@+id/select_belonged_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_belonged_group" />

        <TextView
            android:id="@+id/group_id_field2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <EditText
            android:id="@+id/content_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_get_mem_group_first" />

        <Button
            android:id="@+id/set_group_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_group_content" />
    </LinearLayout>

</ScrollView>