<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dip" >

        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_with_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with_token" />

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/login_with_username"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/login_with_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_username" />

            <RadioButton
                android:id="@+id/login_with_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_with_phone" />
        </RadioGroup>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ua_email_phone"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

</ScrollView>