<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_desc" />

    <Button
        android:id="@+id/create_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_create_topic" />
    
    <Button
        android:id="@+id/push_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/push_send" />

</LinearLayout>