<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/editTextResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/url"
            android:textStyle="italic" />

        <Button
            android:id="@+id/buttonGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:onClick="urlGoHandler"
            android:text="@string/go" />

    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/textViewExpirationTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expiration_time" />

        <EditText
            android:id="@+id/editTextExpirationTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="@string/default_expiration_time" >
        </EditText>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
    
        <TextView
            android:id="@+id/textViewKiiFiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/files_in_cloud"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textViewSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:text="@string/size"
            android:textStyle="italic" />

    </LinearLayout>
    
    <ListView
        android:id="@+id/listViewKiiFiles"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

    </ListView>
</LinearLayout>